# pythomata

./: .buildinfo  .gitignore  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  pythomata.base.html  pythomata.html  readme.html  requirements.txt  requirements_dev.txt  requirements_test.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  strategy.ini  (+2 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_PR.md
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  pythomata.base.rst.txt  pythomata.rst.txt
_static/: documentation_options.js
authors/: index.html
contributing/: index.html
docs/: .gitignore  CNAME  Makefile  conf.py  implement-your-automaton.md  install.md  installation.rst  introduction.md  make.bat  my_awesome_automaton  quickstart.md  references.md  release-history.md  usage.rst
implement-your-automaton/: index.html
install/: index.html
introduction/: index.html
pythomata/: Simulator.py  __init__.py  __version__.py  _internal_utils.py  alphabets.py  base.py  cli.py  core.py  dfa.py  nfa.py  simulator.py  utils.py
quickstart/: index.html
references/: index.html
release-history/: index.html
scripts/: build-dev-img.sh  freeze_dependencies.py  run-dev-img.sh
search/: search_index.json
(+61 files in other folders)
