[bdist_wheel]
universal = 1

[aliases]
test = pytest


[metadata]
license_file = LICENSE

[flake8]
ignore = D203, W503, E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
    pythomata/__init__.py
max-complexity = 10
max-line-length = 110

[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-graphviz.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

[mypy-hypothesis.*]
ignore_missing_imports = True
